--- a/src/styles/utils/light/light.scss
+++ b/src/styles/utils/light/light.scss
@@ -1,5 +1,4 @@
-@media (prefers-color-scheme: light) {
-  :root {
+  :root.light {
     --bg-color: white;
     --color: black;
     --bg-imageMenu: url(../images/icon/menu.svg);
@@ -8,4 +7,3 @@
     --bg-imageAbout: url(../images/icon/ABOUTTHE.svg);
     --bg-imageProject: url(../images/icon/PROJECT.svg);
   }
-}
